Improve Swagger output
