# swagger.json
@@ -11,12 +11,32 @@
     "https"
   ],
   "paths": {
-    "/": {
+    "/login": {
       "get": {
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -31,8 +51,8 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -68,14 +88,14 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "202": {
+            "description": "Accepted"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "400": {
+            "description": "Bad Request"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -141,11 +161,11 @@
           "201": {
             "description": "Created"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "400": {
+            "description": "Bad Request"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -163,8 +183,8 @@
           "201": {
             "description": "Created"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -178,55 +198,39 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Customer"
+        ],
+        "description": "Endpoint to add a Customer.",
+        "produces": [
+          "application/xml"
+        ],
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Customer information.",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "username": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "address": {
-                  "example": "any"
-                },
-                "phone": {
-                  "example": "any"
-                },
-                "occupation": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/CreateCustomer"
             }
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "202": {
+            "description": "Accepted",
+            "message": "A new customer has been added to the database",
+            "added customer": "customer"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "400": {
+            "description": "Bad Request"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -295,11 +299,11 @@
           "201": {
             "description": "Created"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "400": {
+            "description": "Bad Request"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -317,10 +321,124 @@
           "201": {
             "description": "Created"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "401": {
+            "description": "Unauthorized"
           }
         }
+      }
+    }
+  },
+  "definitions": {
+    "Customer": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Jhon Doe"
+        },
+        "age": {
+          "type": "number",
+          "example": 29
+        },
+        "username": {
+          "type": "string",
+          "example": "johndoe@example.com"
+        },
+        "email": {
+          "type": "string",
+          "example": "johndoe@example.com"
+        },
+        "address": {
+          "type": "object",
+          "properties": {
+            "street": {
+              "type": "string",
+              "example": "304 York Street"
+            },
+            "city": {
+              "type": "string",
+              "example": "New York"
+            },
+            "zip": {
+              "type": "string",
+              "example": "12345"
+            }
+          }
+        },
+        "phone": {
+          "type": "string",
+          "example": "55566677799900"
+        },
+        "occupation": {
+          "type": "string",
+          "example": "Front End Developer"
+        }
+      },
+      "xml": {
+        "name": "Customer"
+      }
+    },
+    "CreateCustomer": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Jhon Doe"
+        },
+        "age": {
+          "type": "number",
+          "example": 29
+        },
+        "username": {
+          "type": "string",
+          "example": "johndoe@example.com"
+        },
+        "email": {
+          "type": "string",
+          "example": "johndoe@example.com"
+        },
+        "address": {
+          "type": "object",
+          "properties": {
+            "street": {
+              "type": "string",
+              "example": "304 York Street"
+            },
+            "city": {
+              "type": "string",
+              "example": "New York"
+            },
+            "zip": {
+              "type": "string",
+              "example": "12345"
+            }
+          },
+          "required": [
+            "street",
+            "city",
+            "zip"
+          ]
+        },
+        "phone": {
+          "type": "string",
+          "example": "55566677799900"
+        },
+        "occupation": {
+          "type": "string",
+          "example": "Front End Developer"
+        }
+      },
+      "required": [
+        "name",
+        "age",
+        "username",
+        "email",
+        "address",
+        "phone",
+        "occupation"
+      ],
+      "xml": {
+        "name": "CreateCustomer"
       }
     }
   }
